--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
+  "scripts": {
+    "dev": "node server.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "js-yaml": "^4.1.0",
+    "moment": "^2.30.1",
     "mysql": "^2.18.1"
   }
 }
