--- a/src/config/captcha.yml
+++ b/src/config/captcha.yml
@@ -66,4 +66,6 @@ words:
   - Summer Wars
   - The Girl Who Leapt Through Time
   - Boku no Pico
+  - Rascal Does Not Dream
   - Eromanga Sensei
+  - Tonikaku Kawaii
