--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dev": "node server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
