--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "express-session": "^1.18.0",
     "js-yaml": "^4.1.0",
     "moment": "^2.30.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.10.2",
+    "slugify": "^1.6.6"
   }
 }
