--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dev": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
@@ -10,6 +11,7 @@
     "express-session": "^1.18.0",
     "js-yaml": "^4.1.0",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.2",
     "slugify": "^1.6.6"
