NakamaStream - Mega Update features and desing part 2

--- a/src/config/captcha.yml
+++ b/src/config/captcha.yml
@@ -1,4 +1,4 @@
-words:
+animes:
   - Naruto
   - One Piece
   - Dragon Ball
@@ -19,7 +19,6 @@ words:
   - Fairy Tail
   - Black Clover
   - Naruto Shippuden
-  - Attack on Titan
   - Dragon Ball Z
   - Code Geass
   - Steins;Gate
@@ -31,14 +30,11 @@ words:
   - Your Lie in April
   - Mob Psycho 100
   - Berserk
-  - Hunter x Hunter
   - Promised Neverland
   - Haikyuu!!
   - Assassination Classroom
   - Food Wars!
   - Darling in the Franxx
-  - Fairy Tail
-  - Demon Slayer: Kimetsu no Yaiba
   - Made in Abyss
   - Akame ga Kill!
   - Soul Eater
@@ -69,3 +65,38 @@ words:
   - Rascal Does Not Dream
   - Eromanga Sensei
   - Tonikaku Kawaii
+  - Clannad
+  - Noragami
+  - Great Teacher Onizuka
+  - Hellsing
+  - March Comes in Like a Lion
+  - K-On!
+  - Log Horizon
+  - Anohana: The Flower We Saw That Day
+  - Parasyte: The Maxim
+  - Black Lagoon
+  - Elfen Lied
+  - Gintama
+  - Nana
+  - Angel Beats!
+  - D.Gray-man
+  - Outlaw Star
+  - Mushishi
+  - Durarara!!
+  - Kakegurui
+  - Yuri!!! on ICE
+  - Haruhi Suzumiya no Yuuutsu
+  - ReLIFE
+  - Tsukimonogatari
+  - Guilty Crown
+  - Zombieland Saga
+  - Wotakoi: Love is Hard for Otaku
+  - Cautious Hero: The Hero Is Overpowered but Overly Cautious
+  - Psycho-Pass
+  - Maid-Sama!
+  - Kiznaiver
+  - Hinamatsuri
+  - Kekkai Sensen (Blood Blockade Battlefront)
+  - Yona of the Dawn
+  - Tari Tari
+  - Hitori Bocchi no Marumaru Seikatsu
