--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
     "dev": "node server.js"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
     "express-session": "^1.18.0",
+    "express-validator": "^7.2.0",
+    "gsap": "^3.12.5",
     "js-yaml": "^4.1.0",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.10.2",
-    "slugify": "^1.6.6"
+    "mysql2": "^3.11.0",
+    "qrcode": "^1.5.4",
+    "slugify": "^1.6.6",
+    "xss": "^1.0.15"
   }
 }
