--- a/src/config/captcha.yml
+++ b/src/config/captcha.yml
@@ -72,8 +72,8 @@ words:
   - March Comes in Like a Lion
   - K-On!
   - Log Horizon
-  - Anohana: The Flower We Saw That Day
-  - Parasyte: The Maxim
+  - Anohana
+  - Parasyte
   - Black Lagoon
   - Elfen Lied
   - Gintama
@@ -90,8 +90,8 @@ words:
   - Tsukimonogatari
   - Guilty Crown
   - Zombieland Saga
-  - Wotakoi: Love is Hard for Otaku
-  - Cautious Hero: The Hero Is Overpowered but Overly Cautious
+  - Wotakoi
+  - Cautious Hero
   - Psycho-Pass
   - Maid-Sama!
   - Kiznaiver
@@ -100,3 +100,37 @@ words:
   - Yona of the Dawn
   - Tari Tari
   - Hitori Bocchi no Marumaru Seikatsu
+  - Made in Abyss
+  - Re:Creators
+  - Baccano!
+  - KonoSuba
+  - The Rising of the Shield Hero
+  - Great Pretender
+  - Land of the Lustrous
+  - The Promised Neverland
+  - March Comes in Like a Lion
+  - Sakamichi no Apollon (Kids on the Slope)
+  - Tengen Toppa Gurren Lagann
+  - Sakura Quest
+  - Shouwa Genroku Rakugo Shinjuu
+  - Monogatari Series
+  - Hoshino Samidare
+  - Nodame Cantabile
+  - Hitori Bocchi no Marumaru Seikatsu
+  - Kaze no Tani no Naushika (Nausicaä of the Valley of the Wind)
+  - Bunny Drop
+  - Hinamatsuri
+  - Natsume’s Book of Friends
+  - Kimi ni Todoke
+  - Anohana
+  - Sakura Trick
+  - Hakata Tonkotsu Ramens
+  - The Tatami Galaxy
+  - Tatami Galaxy
+  - Mushishi
+  - Shingeki no Kyojin (Attack on Titan)
+  - Chihayafuru
+  - Kimi ni Todoke
+  - The Ancient Magus' Bride
+  - Nana
+  - Higurashi When They Cry
