package.json - add console.table & express-useragent

--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "console.table": "^0.10.0",
+    "cookie-parser": "^1.4.6",
+    "cropperjs": "^1.6.2",
     "csurf": "^1.11.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
     "express-session": "^1.18.0",
+    "express-useragent": "^1.0.15",
     "express-validator": "^7.2.0",
     "gsap": "^3.12.5",
     "js-yaml": "^4.1.0",
@@ -19,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
+    "node-fetch": "^2.7.0",
     "qrcode": "^1.5.4",
     "slugify": "^1.6.6",
     "xss": "^1.0.15"
