--- a/src/config/captcha.yml
+++ b/src/config/captcha.yml
@@ -14,15 +14,14 @@ words:
   - Cowboy Bebop
   - Neon Genesis Evangelion
   - Hunter x Hunter
-  - JoJo's Bizarre Adventure
   - Pokémon
   - Fairy Tail
   - Black Clover
   - Naruto Shippuden
   - Dragon Ball Z
   - Code Geass
-  - Steins;Gate
-  - Re:Zero
+  - Steins Gate
+  - Re Zero
   - Evangelion
   - Sailor Moon
   - Violet Evergarden
@@ -31,21 +30,17 @@ words:
   - Mob Psycho 100
   - Berserk
   - Promised Neverland
-  - Haikyuu!!
+  - Haikyuu
   - Assassination Classroom
-  - Food Wars!
+  - Food Wars
   - Darling in the Franxx
   - Made in Abyss
-  - Akame ga Kill!
+  - Akame ga Kill
   - Soul Eater
-  - Tokyo Ghoul:re
-  - My Neighbor Totoro
-  - Kiki's Delivery Service
-  - Howl's Moving Castle
+  - Tokyo Ghoul re
   - Spirited Away
   - Princess Mononoke
   - Grave of the Fireflies
-  - Nausicaä of the Valley of the Wind
   - Castle in the Sky
   - Ponyo
   - The Wind Rises
@@ -56,11 +51,9 @@ words:
   - Pom Poko
   - Ocean Waves
   - Tales from Earthsea
-  - The Tale of the Princess Kaguya
   - When Marnie Was There
   - Wolf Children
   - Summer Wars
-  - The Girl Who Leapt Through Time
   - Boku no Pico
   - Rascal Does Not Dream
   - Eromanga Sensei
@@ -69,8 +62,7 @@ words:
   - Noragami
   - Great Teacher Onizuka
   - Hellsing
-  - March Comes in Like a Lion
-  - K-On!
+  - K-On
   - Log Horizon
   - Anohana
   - Parasyte
@@ -78,49 +70,42 @@ words:
   - Elfen Lied
   - Gintama
   - Nana
-  - Angel Beats!
-  - D.Gray-man
+  - Angel Beats
+  - D Gray man
   - Outlaw Star
   - Mushishi
-  - Durarara!!
+  - Durarara
   - Kakegurui
-  - Yuri!!! on ICE
-  - Haruhi Suzumiya no Yuuutsu
+  - Yuri on ICE
   - ReLIFE
   - Tsukimonogatari
   - Guilty Crown
   - Zombieland Saga
   - Wotakoi
   - Cautious Hero
-  - Psycho-Pass
-  - Maid-Sama!
+  - Psycho Pass
+  - Maid Sama
   - Kiznaiver
   - Hinamatsuri
-  - Kekkai Sensen (Blood Blockade Battlefront)
+  - Kekkai Sensen
   - Yona of the Dawn
   - Tari Tari
-  - Hitori Bocchi no Marumaru Seikatsu
   - Made in Abyss
-  - Re:Creators
-  - Baccano!
+  - Re Creators
+  - Baccano
   - KonoSuba
-  - The Rising of the Shield Hero
   - Great Pretender
   - Land of the Lustrous
   - The Promised Neverland
-  - March Comes in Like a Lion
-  - Sakamichi no Apollon (Kids on the Slope)
-  - Tengen Toppa Gurren Lagann
+  - Sakamichi no Apollon
   - Sakura Quest
-  - Shouwa Genroku Rakugo Shinjuu
   - Monogatari Series
   - Hoshino Samidare
   - Nodame Cantabile
-  - Hitori Bocchi no Marumaru Seikatsu
-  - Kaze no Tani no Naushika (Nausicaä of the Valley of the Wind)
+  - Kaze no Tani no Naushika
   - Bunny Drop
   - Hinamatsuri
-  - Natsume’s Book of Friends
+  - Natsume's Book of Friends
   - Kimi ni Todoke
   - Anohana
   - Sakura Trick
@@ -128,9 +113,7 @@ words:
   - The Tatami Galaxy
   - Tatami Galaxy
   - Mushishi
-  - Shingeki no Kyojin (Attack on Titan)
+  - Shingeki no Kyojin
   - Chihayafuru
   - Kimi ni Todoke
-  - The Ancient Magus' Bride
   - Nana
-  - Higurashi When They Cry
