--- a/src/config/captcha.yml
+++ b/src/config/captcha.yml
@@ -2,118 +2,39 @@ words:
   - Naruto
   - One Piece
   - Dragon Ball
-  - Attack on Titan
-  - My Hero Academia
-  - Death Note
-  - Fullmetal Alchemist
-  - Sword Art Online
-  - Demon Slayer
-  - One Punch Man
-  - Tokyo Ghoul
   - Bleach
-  - Cowboy Bebop
-  - Neon Genesis Evangelion
-  - Hunter x Hunter
-  - Pokémon
   - Fairy Tail
-  - Black Clover
-  - Naruto Shippuden
-  - Dragon Ball Z
-  - Code Geass
+  - Berserk
+  - Haikyuu
+  - Elfen Lied
+  - Nana
+  - Mob Psycho
+  - Noragami
+  - Gintama
+  - Parasyte
+  - Clannad
+  - K-On
+  - ReLIFE
   - Steins Gate
   - Re Zero
-  - Evangelion
-  - Sailor Moon
   - Violet Evergarden
-  - Gurren Lagann
-  - Your Lie in April
-  - Mob Psycho 100
-  - Berserk
-  - Promised Neverland
-  - Haikyuu
-  - Assassination Classroom
-  - Food Wars
-  - Darling in the Franxx
-  - Made in Abyss
   - Akame ga Kill
-  - Soul Eater
-  - Tokyo Ghoul re
-  - Spirited Away
-  - Princess Mononoke
-  - Grave of the Fireflies
-  - Castle in the Sky
-  - Ponyo
-  - The Wind Rises
-  - Whisper of the Heart
-  - The Cat Returns
-  - Porco Rosso
-  - Only Yesterday
-  - Pom Poko
-  - Ocean Waves
-  - Tales from Earthsea
-  - When Marnie Was There
-  - Wolf Children
-  - Summer Wars
-  - Boku no Pico
-  - Rascal Does Not Dream
-  - Eromanga Sensei
-  - Tonikaku Kawaii
-  - Clannad
-  - Noragami
-  - Great Teacher Onizuka
-  - Hellsing
-  - K-On
-  - Log Horizon
-  - Anohana
-  - Parasyte
-  - Black Lagoon
-  - Elfen Lied
-  - Gintama
-  - Nana
-  - Angel Beats
-  - D Gray man
-  - Outlaw Star
-  - Mushishi
-  - Durarara
-  - Kakegurui
-  - Yuri on ICE
-  - ReLIFE
-  - Tsukimonogatari
-  - Guilty Crown
-  - Zombieland Saga
-  - Wotakoi
-  - Cautious Hero
   - Psycho Pass
   - Maid Sama
   - Kiznaiver
   - Hinamatsuri
-  - Kekkai Sensen
-  - Yona of the Dawn
-  - Tari Tari
-  - Made in Abyss
-  - Re Creators
-  - Baccano
-  - KonoSuba
-  - Great Pretender
-  - Land of the Lustrous
-  - The Promised Neverland
-  - Sakamichi no Apollon
-  - Sakura Quest
-  - Monogatari Series
-  - Hoshino Samidare
-  - Nodame Cantabile
-  - Kaze no Tani no Naushika
-  - Bunny Drop
-  - Hinamatsuri
-  - Natsume's Book of Friends
-  - Kimi ni Todoke
-  - Anohana
-  - Sakura Trick
-  - Hakata Tonkotsu Ramens
-  - The Tatami Galaxy
-  - Tatami Galaxy
   - Mushishi
-  - Shingeki no Kyojin
-  - Chihayafuru
-  - Kimi ni Todoke
-  - Nana
+  - Durarara
+  - Kakegurui
+  - KonoSuba
+  - Baccano
+  - Outlaw Star
+  - Hellsing
+  - Black Lagoon
+  - Angel Beats
+  - Zombieland
+  - Guilty Crown
+  - Anohana
+  - Wotakoi
+  - Kekkai Sensen
+  - Tonikaku Kawaii
