--- a/src/config/email.yml
+++ b/src/config/email.yml
@@ -5,8 +5,13 @@ nodemailer:
 
   # El nombre de usuario de la cuenta de correo electrónico que se utilizará para autenticar el envío de correos.
   # Debe ser la dirección de correo electrónico completa.
-  user: "tugmail@gmail.com"
+  user: "luiescalderonh@gmail.com"
 
   # La contraseña de la cuenta de correo electrónico.
   # Se recomienda usar un "App Password" de Gmail en lugar de la contraseña de la cuenta para mayor seguridad.
-  pass: "Contraseña de app de gmail"
+  pass: "yrxz vsvk gbgi zvwl"
+
+
+resetPasswordBaseURL: "http://localhost:3000"
+resetPasswordSubject: "Restablecimiento de contraseña"
+resetPasswordMessage: "Hola, por favor usa el siguiente enlace para restablecer tu contraseña: {link}. Este enlace expira en 1 hora."
