--- a/src/config/email.yml
+++ b/src/config/email.yml
@@ -5,11 +5,11 @@ nodemailer:
 
   # El nombre de usuario de la cuenta de correo electrónico que se utilizará para autenticar el envío de correos.
   # Debe ser la dirección de correo electrónico completa.
-  user: "luiescalderonh@gmail.com"
+  user: "tucorreo/yourmail"
 
   # La contraseña de la cuenta de correo electrónico.
   # Se recomienda usar un "App Password" de Gmail en lugar de la contraseña de la cuenta para mayor seguridad.
-  pass: "yrxz vsvk gbgi zvwl"
+  pass: "yourpass/tucontraseña"
 
 
 resetPasswordBaseURL: "http://localhost:3000"
