--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "console.table": "^0.10.0",
+    "cookie-session": "^2.1.0",
     "cropperjs": "^1.6.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
