--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0",
     "console.table": "^0.10.0",
     "cookie-session": "^2.1.0",
     "cropperjs": "^1.6.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.0",
     "express-useragent": "^1.0.15",
     "gsap": "^3.12.5",
