--- a/src/config/captcha.yml
+++ b/src/config/captcha.yml
@@ -38,3 +38,50 @@ words:
   - Wotakoi
   - Kekkai Sensen
   - Tonikaku Kawaii
+  - Dororo
+  - Monster
+  - Attack on Titan
+  - My Hero Academia
+  - Demon Slayer
+  - Death Note
+  - Sword Art Online
+  - Fullmetal Alchemist
+  - Cowboy Bebop
+  - Your Lie in April
+  - Tokyo Ghoul
+  - Jujutsu Kaisen
+  - The Promised Neverland
+  - Fairy Gone
+  - Re:Zero
+  - Black Clover
+  - Fire Force
+  - Mob Psycho 100
+  - The Seven Deadly Sins
+  - Assassination Classroom
+  - No Game No Life
+  - Steins;Gate 0
+  - The Rising of the Shield Hero
+  - Vinland Saga
+  - Paranoia Agent
+  - Akudama Drive
+  - Re:Creators
+  - Gurren Lagann
+  - Clannad: After Story
+  - A Silent Voice
+  - The Ancient Magus Bride
+  - Made in Abyss
+  - The Devil is a Part-Timer
+  - Hyouka
+  - The Melancholy of Haruhi Suzumiya
+  - Spice and Wolf
+  - Toradora
+  - Golden Time
+  - Bakemonogatari
+  - Kimi ni Todoke
+  - Shingeki no Kyojin
+  - The Quintessential Quintuplets
+  - Re:Zero
+  - The God of High School
+  - Dorohedoro
+  - The World God Only Knows
+  - Gintama: The Final
