--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
-    "axios": "^1.7.9",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
+    "body-parser": "^1.20.2",
     "cheerio": "^1.0.0",
     "console.table": "^0.10.0",
     "cookie-session": "^2.1.0",
     "cropperjs": "^1.6.2",
     "ejs": "^3.1.10",
-    "express": "^4.21.2",
+    "express": "^4.19.2",
     "express-rate-limit": "^7.4.1",
-    "express-session": "^1.18.1",
+    "express-session": "^1.18.0",
     "express-useragent": "^1.0.15",
     "gsap": "^3.12.5",
     "js-yaml": "^4.1.0",
     "moment": "^2.30.1",
-    "multer": "1.4.5-lts.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nakamaui": "^1.0.2",
-    "nodemailer": "^6.9.16",
+    "nakamaui": "^1.0.3",
+    "nodemailer": "^6.9.15",
     "slugify": "^1.6.6"
   }
 }
